<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/download_speed"
        style="@style/update_textview_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/ProgressBar_Update"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="0" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/download_file_start"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/total_length"
        style="@style/update_textview_style"
        android:layout_marginTop="20dp"
        android:text="@string/total_length" />

    <TextView
        android:id="@+id/current_offset"
        style="@style/update_textview_style"
        android:layout_marginTop="5dp"
        android:text="@string/current_offset" />

</LinearLayout>