<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.snbc.otaapp.RestartActivity">

    <LinearLayout
        android:id="@+id/ll_restart_show"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_bg1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/update_textview_style"
            android:text="@string/is_restart_now" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/update_textview_style"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/btn_bg1"
                android:padding="10dp"
                android:text="@string/later_remind" />

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="100dp"
                style="@style/update_textview_style"
                android:background="@drawable/btn_bg"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/restart_now"
                android:textColor="@color/c2" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
